build/prod/kubernetes/test.yml
apiVersion: v1
kind: Pod
metadata:
  name: dnsutils
  namespace: default
spec:
  containers:
  - name: dnsutils
    image: busybox
    command:
    - sleep
    - "3600"
